--- a/inst/rmd/MQ_report_peptides.Rmd
+++ b/inst/rmd/MQ_report_peptides.Rmd
@@ -122,7 +122,7 @@ if(is.null(params$input_datatable)){
 
 meta_table <- params$meta_table 
 
-#meta_table <- read.delim("peptides3_meta.txt", header = TRUE, check.names = FALSE, stringsAsFactors = FALSE) # test with meta file
+#meta_table <- read.delim("metadata.txt", header = TRUE, check.names = FALSE, stringsAsFactors = FALSE) # test with meta file
 
 
 ```
@@ -394,7 +394,7 @@ if(ncol(df_intensity) > 3){ # otherwise, no point doing PCA
 
     # do pca analysis with meta groupign information
     
-    pca <-PCA_wrapper_prcomp2(data_matrix = as.matrix(df_intensity_log10), data_meta =  meta_table[,c(1,3)], inputation = TRUE)
+    pca <-PCA_wrapper_prcomp2(data_matrix = as.matrix(df_intensity_log10), data_meta =  meta_table[,c(2,3)], inputation = FALSE)
 
     
     # plotting
