--- a/inst/rmd/MQ_report_peptides.Rmd
+++ b/inst/rmd/MQ_report_peptides.Rmd
@@ -424,13 +424,15 @@ if(ncol(df_intensity) > 3){ # otherwise, no point doing PCA
 ```
 
 
-`r if(length(unique(meta_table[,3])) >=2) {"# ANOVA TEST  \n**Peptides with significiant(p < 0.05) change between any groups**"}`
+`r if(length(unique(meta_table[,3])) >=2  && all(table(meta_table[,3]) >=2)) {"# ANOVA TEST  \n**Peptides with significiant(p < 0.05) change between any groups**"}`
 
 
 
 ```{r echo=FALSE,fig.width= 8,fig.height=6}
 
-if(length(unique(meta_table[,3])) >=2){
+# will do this block while: 1, more than (includeing) two meta/groups, 2, each group has more than (includeing) 2 samples.
+
+if(length(unique(meta_table[,3])) >=2  && all(table(meta_table[,3]) >=2)){
 
 pvalues_anova <- matrix_PostHoc(df_intensity,meta_table[,3])
 
